fixed extra spacing on tourney page

--- a/src/views/owned.css
+++ b/src/views/owned.css
@@ -1,4 +1,4 @@
-h1 {
+.owned-tourney-list h1 {
     margin-left: 30px;
 }
 
