--- a/src/views/participating.css
+++ b/src/views/participating.css
@@ -1,4 +1,4 @@
-h1 {
+.partic-h1 {
     margin-left: 30px;
 }
 
